# Keyboard

./: README.md
hw/: .gitignore  COPYING  CPU-Left.kicad_sch  CPU-Navblock.kicad_sch  CPU-Numblock.kicad_sch  CPU-Right.kicad_sch  KeyMatrix-Left.kicad_sch  KeyMatrix-Navblock.kicad_sch  KeyMatrix-Numblock.kicad_sch  KeyMatrix-Right.kicad_sch  Keyboard-Left.kicad_sch  Keyboard-Navblock.kicad_sch  Keyboard-Numblock.kicad_sch  Keyboard-Outer-Case.FCStd  Keyboard-Right.kicad_sch  Keyboard.kicad_pro  Keyboard.kicad_sch  LedMatrix-Left.kicad_sch  LedMatrix-Navblock.kicad_sch  LedMatrix-Numblock.kicad_sch  LedMatrix-Right.kicad_sch  LevelShifters-Left.kicad_sch  LevelShifters-Navblock.kicad_sch  LevelShifters-Numblock.kicad_sch  LevelShifters-Right.kicad_sch  PowerSupply.kicad_sch  fp-lib-table  sym-lib-table
hw/lib/: Keyboard.kicad_sym
hw/lib/Keyboard.pretty/: APTF1616-RGB.kicad_mod  APTF1616-RGB.x3d  C_0402.kicad_mod  C_1206.kicad_mod  C_1210.kicad_mod  Crystal_SMD_Multicomp_5032.kicad_mod  Current-Probe-2.54.kicad_mod  DistanceBolt-6x3.5.kicad_mod  DistanceBolt-6x3.5.x3d  DistanceBolt-M3x5.kicad_mod  DistanceBolt-M3x5.x3d  FC68125.kicad_mod  FC68125.x3d  Keycap-R1-1.25x1.kicad_mod  Keycap-R1-1.25x1.x3d  LQFP-100.x3d  (+35 more)
hw/sim/: LedMatrix.kicad_pro  LedMatrix.kicad_sch  LedMatrix.wbk
src/: .gitignore  COPYING  Makefile  architecture.xmi  crc8.cpp  crc8.h  cross.build  effect.cpp  effect.h  effect_controller.cpp  effect_controller.h  event.cpp  event.h  hid_keyboard_endpoint.cpp  hid_keyboard_endpoint.h  inttable.c  key_layout.cpp  key_layout.h  key_matrix.cpp  key_matrix.h  led_layout.cpp  led_layout.h  led_matrix.cpp  led_matrix.h  main.cpp  memSections.ld  meson.build  modular_keyboard.cpp  modular_keyboard.h  module.cpp  module.h  module_detection.cpp  module_detection.h  pin.h  pinout.h  priority.h  ringbuffer.h  ringbuffer.inl  st_nucleo_f401re.cfg  startup.cpp  (+26 more)
src/FreeRTOS/: FreeRTOSConfig.h  meson.build
src/dev/: core.h  dma.h  exti.h  flash.h  gpio.h  pwr.h  rcc.h  timer.h  uart.h  usb.h
(+21 files in other folders)
